--- a/README
+++ b/README
@@ -1,7 +1,9 @@
 MagicEnum
 =========
 
-Method used to define ENUM attributes in your model. Examples:
+Method used to define ENUM-like attributes in your model. 
+
+Examples:
  
    Statuses = {
      :draft => 0,
@@ -10,25 +12,25 @@ Method used to define ENUM attributes in your model. Examples:
    }
    define_enum :status
  
-Before using <tt>define_enum</tt>, you should define constant with ENUM options.
+Before using define_enum, you should define constant with ENUM options.
 Constant name would be pluralized enum attribute name. Additional constant named
-like <tt>YourEnumInverted</tt> would be created automatically and would contain
+like YourEnumInverted would be created automatically and would contain
 inverted hash.
  
-<b>Please note</b>: <tt>nil</tt> and <tt>0</tt> are not the same values!
+*Please note*: nil and 0 are not the same values!
  
 You could specify additional options:
 
- * <tt>:default</tt> - value which will be used when current state of ENUM attribute is
+ * :default - value which will be used when current state of ENUM attribute is
    invalid or wrong value received. If it has not been specified, min value of the ENUM would
    be used.
- * <tt>:raise_on_invalid</tt> - if <tt>true</tt> an exception would be raised on invalid
-   enum value received. If it is <tt>false</tt>, default value would be used instead of
+ * :raise_on_invalid - if true an exception would be raised on invalid
+   enum value received. If it is false, default value would be used instead of
    wrong one.
- * <tt>:simple_accessors</tt> - if <tt>true</tt>, additional methods for each ENUM value
-   would be defined in form <tt>value?</tt>. Methods returns <tt>true</tt> when
+ * :simple_accessors - if true, additional methods for each ENUM value
+   would be defined in form value?. Methods returns true when
    ENUM attribute has corresponding value.
- * <tt>:enum</tt> - string with name of the ENUM hash.
+ * :enum - string with name of the ENUM hash.
  
 Look the following example:
  
