--- a/README.rdoc
+++ b/README.rdoc
@@ -1,36 +1,31 @@
-MagicEnum
-=========
+= MagicEnum
 
-Method used to define ENUM-like attributes in your model. 
+MagicEnum is a simple ActiveRecord plugin that makes it easier to maintain ENUM-like attributes in your models.
 
 Examples:
- 
+
    Statuses = {
      :draft => 0,
      :published => 1,
      :approved => 2
    }
    define_enum :status
+
+== How to Use
  
-Before using define_enum, you should define constant with ENUM options.
+Before using <tt>define_enum</tt>, you should define constant with ENUM options.
 Constant name would be pluralized enum attribute name. Additional constant named
 like YourEnumInverted would be created automatically and would contain
 inverted hash.
  
-*Please note*: nil and 0 are not the same values!
+<b>Please note</b>: nil and 0 are not the same values!
  
 You could specify additional options:
 
- * :default - value which will be used when current state of ENUM attribute is
-   invalid or wrong value received. If it has not been specified, min value of the ENUM would
-   be used.
- * :raise_on_invalid - if true an exception would be raised on invalid
-   enum value received. If it is false, default value would be used instead of
-   wrong one.
- * :simple_accessors - if true, additional methods for each ENUM value
-   would be defined in form value?. Methods returns true when
-   ENUM attribute has corresponding value.
- * :enum - string with name of the ENUM hash.
+* <tt>:default</tt> - value which will be used when current state of ENUM attribute is invalid or wrong value received. If it has not been specified, min value of the ENUM would be used.
+* <tt>:raise_on_invalid</tt> - if +true+ an exception would be raised on invalid enum value received. If it is +false+, default value would be used instead of wrong one.
+* <tt>:simple_accessors</tt> - if +true+, additional methods for each ENUM value would be defined in form value?. Methods returns +true+ when ENUM attribute has corresponding value.
+* <tt>:enum</tt> - string with name of the ENUM hash.
  
 Look the following example:
  
@@ -76,3 +71,7 @@ This example is identical to:
    def approved?
      status == :approved
    end
+
+== Who are the authors?
+
+This plugin was originally developed for BestTechVideos project (http://www.bestechvideos.com) and later was cleaned up in Scribd repository and released to the public. All the code in this package is released under the GPLv2 license. For more details, see the LICENSE file.
